--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,7 @@
 <div class="message me mb-2">
     <div class="content">
         <div class="text">
+            <p><strong><%=message.sent_by%></strong></p> <br>
             <p><%=message.text%></p>
         </div>
     </div>
