--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -11,7 +11,7 @@
     <div class="message others mb-2">
         <div class="content">
             <div class="text">
-                <p><strong><%=User.find(message.sent_by).name%></strong></p> <br>
+                <p><strong><%=User.find(message.sent_by).name%></strong> : <%=message.text%> </p>
                 <p><%=message.text%></p>
             </div>
         </div>
