--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -17,6 +17,7 @@
                         </div>
                     </a>
                 <%end%>
+                <div id="notifications"></div>
             </div>
             <button class="btn btn-block btn-success mt-5"> 
             <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
