--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,56 @@
-<h2>Sign up</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <meta charset="UTF-8">
+  <title>Daily UI | #001 - Sign Up</title>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+</head>
+<body class="align">
+
+  <div class="grid align__item">
+
+    <div class="register">
+
+      <img class="site__logo" width="84" height="84" src=<%= image_path('charla.svg') %> >
+
+      <h2>Sign Up</h2>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="form__field">
+          <%= f.text_field :name, autofocus: true, autocomplete: "name", placeholder: "name" %>
+        </div>
+
+        <div class="form__field">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "youremail@example.com" %>
+        </div>
+
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+        <div class="form__field">
+          <%= f.password_field :password, autocomplete: "new-password", placeholder: "••••••••••••" %> 
+        </div>
+
+        <div class="form__field">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "••••••••••••" %>
+        </div>
+
+        <div class="form__field">
+          <%= f.submit "Sign up" %>
+        </div>
+
+      <% end %>
+
+      <p><%= render "devise/shared/links" %></p>
+
+    </div>
+
   </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
+</html>
