--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -18,9 +18,7 @@
                     </a>
                 <%end%>
             </div>
-            <button class="btn btn-block btn-success mt-5"> 
-            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
-            </button>
+            <%=button_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-block btn-success mt-5"%>
         </div>
         <div id="message-area" class="col-9 <%=@room.present? ? "" : "bg-success"%>">
             <%if @room.present?%>
