--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -31,7 +31,11 @@
                 </div>
                 <div id="room-messages">
                     <%@room.messages.each do |message|%>
-                        <%=render "messages/message", message: message%>
+                        <%if (message.sent_by == current_user.id)%>
+                            <%=render "messages/messageme", message: message%>
+                        <%else%>
+                            <%=render "messages/message", message: message%>
+                        <% end %>
                     <%end%>
                 </div>
                 <div class="chat-box">
