--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div id="side-bar" class="col-3">
+            <%= render 'notifications/index' %>
             <div class="mt-2">
                 <%=render "user"%>
             </div>
