--- a/app/views/notifications/users/_messaged.html.erb
+++ b/app/views/notifications/users/_messaged.html.erb
@@ -1,1 +1,4 @@
-<div><%= notification.user.email %> <%= notification.action %> you!</div>
+<hr>
+<strong>
+<%= notification.user.name %> <%= notification.action %> you!
+</strong>
