--- a/app/views/notifications/_index.html.erb
+++ b/app/views/notifications/_index.html.erb
@@ -2,14 +2,22 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    </head>
 <body>
     <% if @notifications %>
         <div class="dropdown">
             <button class="dropbtn">Notifications</button>
             <div class="dropdown-content">
+                <div id="notifications"></div>
                 <% @notifications.each do |notification|%>
-                    <%= notification.user.email %> <%= notification.action %> you!
+                    <hr>
+                    <div class="notification-text">
+                        <%= notification.user.name %> <%= notification.action %> you! 
+                        <%= link_to notification, method: 'delete', :class=> "" do %>
+                            <i class="fa fa-trash-o" aria-hidden="true" target="_blank"></i>
+                        <% end %>
+                    </div> 
                 <%end%>
             </div>
         </div>
